# bezalel

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
config/: config.yaml
src/bezalel/: checkpoint_saver.py  dataset.py  embeddings.py  metrics.py  models.py  nearest_search.py  pdb_convert.py  pdb_loader.py  test.py  train.py  utils.py
